Refactor: Ejemplo de hora actual con shortcut render_to_response

--- a/app/templates/hora.html
+++ b/app/templates/hora.html
@@ -5,6 +5,6 @@
     <title>Hora actual</title>
   </head>
   <body>
-    <p>{{ now }}</p>
+    <p>Hola <strong>{{ user }}</strong>, hoy es {{ now | date:"d M Y" }}</p>
   </body>
 </html>
