--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 
-	<meta name="viewport" 
-		  content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
 	<link rel="stylesheet" href="normalize.css" />
@@ -28,47 +28,44 @@
 		<ul>
 			<li id="flechita_nav"><a href="/"></a></li>
 			{% for cat in categorias %}
-			    <li><a href="{% url "categoria" cat.pk %}">{{cat}}</a></li>
+				<li><a href="{# url "categoria" cat.pk #}">{{cat}}</a></li>
 			{% endfor %}
-			<li id="publicar_nav"><a href="{% url "add" %}">Publicar</a></li>
+			<li id="publicar_nav"><a href="{# url "add" #}">Publicar</a></li>
 		</ul>
 	</nav>
 	<aside id="bienvenida">
-	    {% if not request.user.is_authenticated %}
-		<h2>Hola, registrate!</h2>
-		<p>Es importante registrarte porque LOL!</p>
-		<a id="registro" href="#">Registrate acá</a>
-		<p id="mensaje_registro">En serio, registrate por favor</p>
+		{% if not request.user.is_authenticated %}
+			<h2>Hola, registrate!</h2>
+			<p>Es importante registrarte porque LOL!</p>
+			<a id="registro" href="#">Registrate acá</a>
+			<p id="mensaje_registro">En serio, registrate por favor</p>
 		{% endif %}
 	</aside>
 	<section id="contenido">
-	    {% if enlaces %}
-	    
-	    {% for enlace in enlaces %}
-		<article class="item">
-			<figure class="imagen_item">
-				<img src="imagen.jpg" />
-			</figure>
-			<h2 class="titulo_item">
-				<a href="{{enlace.enlace}}">{{enlace.titulo}}</a>
-			</h2>
-			<p class="autor_item">
-				Por <a href="#">{{enlace.usuario}}</a>
-			</p>
-			<p class="datos_item">
-				<a class="tag_item" href="#">{{enlace.categoria}}</a>
-				<span class="fecha_item">Hace <strong>{{enlace.timestamp|timesince}}</strong> min</span>
-				<a class="guardar_item" href="#"></a>
-			</p>
-			<p class="votacion">
-				<a class="up" href="{% url "plus" enlace.pk %}"></a>
-				{{enlace.votos}}
-				<a class="down" href="{% url "minus" enlace.pk %}"></a>
-			</p>
-		</article>
-		{% endfor %}
+		{% if enlaces %}
+			{% for enlace in enlaces %}
+				<article class="item">
+					<figure class="imagen_item">
+						<img src="imagen.jpg" />
+					</figure>
+					<h2 class="titulo_item">
+						<a href="{{enlace.enlace}}">{{enlace.titulo}}</a>
+					</h2>{{enlace.usuario}}</a>
+					</p>
+					<p class="datos_item">
+						<a class="tag_item" href="#">{{enlace.categoria}}</a>
+						<span class="fecha_item">Hace <strong>{{enlace.timestamp|timesince}}</strong> min</span>
+						<a class="guardar_item" href="#"></a>
+					</p>
+					<p class="votacion">
+						<a class="up" href="{# url "plus" enlace.pk #}"></a>
+						{{enlace.votos}}
+						<a class="down" href="{# url "minus" enlace.pk #}"></a>
+					</p>
+				</article>
+			{% endfor %}
 		{% else %}
-		    NO HAY ENLACES GUARDADOS
+			NO HAY ENLACES GUARDADOS
 		{% endif %}
 	</section>
 	<footer>
@@ -77,12 +74,3 @@
 	</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
