--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,9 +58,9 @@
 						<a class="guardar_item" href="#"></a>
 					</p>
 					<p class="votacion">
-						<a class="up" href="{# url "plus" enlace.pk #}"></a>
+						<a class="up" href="{% url "plus" enlace.pk %}"></a>
 						{{enlace.votos}}
-						<a class="down" href="{# url "minus" enlace.pk #}"></a>
+						<a class="down" href="{% url "minus" enlace.pk %}"></a>
 					</p>
 				</article>
 			{% endfor %}
