--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 		<ul>
 			<li id="flechita_nav"><a href="/"></a></li>
 			{% for cat in categorias %}
-				<li><a href="{# url "categoria" cat.pk #}">{{cat}}</a></li>
+				<li><a href="{% url "categoria" cat.pk %}">{{cat}}</a></li>
 			{% endfor %}
 			<li id="publicar_nav"><a href="{# url "add" #}">Publicar</a></li>
 		</ul>
