Agregar login requerido en las views: plus, minus y add

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,6 +39,10 @@
 			<p>Es importante registrarte porque LOL!</p>
 			<a id="registro" href="#">Registrate acá</a>
 			<p id="mensaje_registro">En serio, registrate por favor</p>
+		{% else %}
+			<p>
+				Hola <strong>{{ request.user.username }}</strong>
+			</p>
 		{% endif %}
 	</aside>
 	<section id="contenido">
