--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,68 +13,10 @@
 	<link rel="stylesheet" href="/static/responsive.css" />
 </head>
 <body>
-	<!-- comentario de lo que sea -->
-	<header>
-		<figure id="logo">
-			<img src="logo.png" />
-		</figure>
-		<h1 id="titulo_header">Puls3: Comunidad de gente cool, atractiva y millonaria</h1>
-		<figure id="avatar">
-			<img src="avatar.jpg" />
-			<figcaption></figcaption>
-		</figure>
-	</header>
-	<nav>
-		<ul>
-			<li id="flechita_nav"><a href="/"></a></li>
-			{% for cat in categorias %}
-				<li><a href="{% url "categoria" cat.pk %}">{{cat}}</a></li>
-			{% endfor %}
-			<li id="publicar_nav"><a href="{% url "add" %}">Publicar</a></li>
-		</ul>
-	</nav>
-	<aside id="bienvenida">
-		{% if not request.user.is_authenticated %}
-			<h2>Hola, registrate!</h2>
-			<p>Es importante registrarte porque LOL!</p>
-			<a id="registro" href="#">Registrate acá</a>
-			<p id="mensaje_registro">En serio, registrate por favor</p>
-		{% else %}
-			<p>
-				Hola <strong>{{ request.user.username }}</strong>
-			</p>
-		{% endif %}
-	</aside>
-	<section id="contenido">
-		{% if enlaces %}
-			{% for enlace in enlaces %}
-				<article class="item">
-					<figure class="imagen_item">
-						<img src="imagen.jpg" />
-					</figure>
-					<h2 class="titulo_item">
-						<a href="{{enlace.enlace}}">{{enlace.titulo}}</a>
-					</h2>{{enlace.usuario}}</a>
-					</p>
-					<p class="datos_item">
-						<a class="tag_item" href="#">{{enlace.categoria}}</a>
-						<span class="fecha_item">Hace <strong>{{enlace.timestamp|timesince}}</strong> min</span>
-						<a class="guardar_item" href="#"></a>
-					</p>
-					<p class="votacion">
-						<a class="up" href="{% url "plus" enlace.pk %}"></a>
-						{{enlace.votos}}
-						<a class="down" href="{% url "minus" enlace.pk %}"></a>
-					</p>
-				</article>
-			{% endfor %}
-		{% else %}
-			NO HAY ENLACES GUARDADOS
-		{% endif %}
-	</section>
-	<footer>
-		<p><strong>Powered by Platzi!</strong></p>
-		<p>Mejorando.la 2013 ®</p>
-	</footer>
+	{% include "header.html" %}
+	{% include "nav.html" %}
+	{% include "aside.html" %}
+	{% include "enlaces.html" %}
+	{% include "footer.html" %}
 </body>
 </html>
