--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,4 @@
 <footer>
-  <p><strong>Powered by Platzi!</strong></p>
+  <p><strong>Powered by Platzi!</strong> {{ frase }}</p>
   <p>Mejorando.la 2013 ®</p>
 </footer>
