Agregar context processor para menu de navegación

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,6 +1,14 @@
 <nav>
   <ul>
     <li id="flechita_nav"><a href="/"></a></li>
+    {% for item in menu %}
+      <li><a href="{{ item.url }}" {% if item.active%}style="color: yellow;"{% endif %}>{{ item.name }}</a></li>
+    {% endfor %}
+  </ul>
+</nav>
+<nav>
+  <ul>
+    <li id="flechita_nav"><a href="/"></a></li>
     {% for cat in categorias %}
       <li><a href="{% url "categoria" cat.pk %}">{{cat}}</a></li>
     {% endfor %}
