--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 
 	<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
 	<link rel="stylesheet" href="normalize.css" />
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
+	<!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' /> -->
 	<link rel="stylesheet" href="/static/estilos.css" />
 	<link rel="stylesheet" href="/static/responsive.css" />
 </head>
