Archivos estáticos e imágenes

--- a/app/templates/enlaces.html
+++ b/app/templates/enlaces.html
@@ -1,9 +1,12 @@
+{% load static %}
+
 <section id="contenido">
   {% if enlaces %}
     {% for enlace in enlaces %}
       <article class="item">
         <figure class="imagen_item">
-          <img src="imagen.jpg" />
+
+          <img src="{% static "imagen.jpg" %}" />
         </figure>
         <h2 class="titulo_item">
           <a href="{{enlace.enlace}}">{{enlace.titulo}}</a>
