--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <header>
   <figure id="logo">
-    <img src="logo.png" />
+    <img src="{% static "logo.png" %}" />
   </figure>
   <h1 id="titulo_header">Puls3: Comunidad de gente cool, atractiva y millonaria</h1>
   <figure id="avatar">
-    <img src="avatar.jpg" />
+    <img src="{% static "avatar.jpg" %}" />
     <figcaption></figcaption>
   </figure>
 </header>
