--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,6 +7,6 @@
   <h1 id="titulo_header">Puls3: Comunidad de gente cool, atractiva y millonaria</h1>
   <figure id="avatar">
     <img src="{% static "avatar.jpg" %}" />
-    <figcaption></figcaption>
+    <figcaption><i class="fas fa-sort-down"></i></figcaption>
   </figure>
 </header>
