--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -7,10 +7,12 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
-		<link rel="stylesheet" href="normalize.css" />
+
+        {% load static %}
+		<link rel="stylesheet" href="{% static "normalize.css" %}" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
-		<link rel="stylesheet" href="/static/estilos.css" />
-		<link rel="stylesheet" href="/static/responsive.css" />
+		<link rel="stylesheet" href="{% static "estilos.css" %}" />
+		<link rel="stylesheet" href="{% static "responsive.css" %}" />
 	</head>
 	<body>
 		{% include "header.html" %}
