--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="{% static "normalize.css" %}" />
 	<link rel="stylesheet" href="{% static "estilos.css" %}" />
 	<link rel="stylesheet" href="{% static "responsive.css" %}" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+          crossorigin="anonymous">
 </head>
 <body>
 	{% include "header.html" %}
